Accra counter module
====================

2016-04-11 AKHE - vscp_getMatrixInfo nw use the pointer supplied by the framework.
2016-04-04 AKHE - Changed value of C14 to 10uF
2016-03-23 AKHE - Version 1.0.2-------------------------------------------------
2016-03-23 AKHE - Adopted for VSCP frimware 1.6.1
2016-03-23 AKHE - Version 1.0.1-------------------------------------------------
2016-03-23 AKHE - Adopted for VSCP firmware 1.6.0
2016-03-23 AKHE - Fixed bug in control byte write.
2016-03-08 AKHE - Adopted to 1.6 firmware. Adopted for PIC18F26K80.
2015-11-15 AKHE - Started development