@@ -1,6 +1,9 @@
 Accra counter module
 ====================
 
+2016-04-19 AKHE - RA4 set to input to prevent collision with VCAP circuits in 
+                  PIC18F2580. Brown out raised to maximum (3V & 4.6V). Valable 
+		  input from Anders Forsgren, AJE Electronics AB. 
 2016-04-11 AKHE - vscp_getMatrixInfo nw use the pointer supplied by the framework.
 2016-04-04 AKHE - Changed value of C14 to 10uF
 2016-03-23 AKHE - Version 1.0.2-------------------------------------------------
